# Termfolio

./: Cargo.toml  README.md  index.html
.github/workflows/: gh-pages-deploy.yml
configs/: config.json  neofetch.txt
configs/lang_icons/: github.txt  python.txt  rust.txt
src/: base.rs  commands.rs  main.rs
src/base/: banner.rs  prompt.rs
src/base/prompt/: general.rs  keyboard.rs  themes.rs
src/commands/: fetch.rs  texts.rs
src/commands/fetch/: formats.rs  structs.rs
styles/: styles.css  themes.css
